# rust-web

./: .gitignore
axum/: docker-compose.yml
axum/data/: Cargo.toml
axum/data/src/: lib.rs  main.rs
axum/data/src/database/: prelude.rs  tasks.rs  users.rs
axum/data/src/routes/: create_task.rs  create_user.rs  custom_json_extractor.rs  delete_tasks.rs  get_one_task.rs  get_tasks.rs  guard.rs  mod.rs  partial_update_tasks.rs  update_tasks.rs  users.rs  validate_with_serde.rs
axum/hello_world/: Cargo.toml
axum/hello_world/src/: main.rs
axum/routing/: Cargo.toml
axum/routing/src/: lib.rs
axum/routing/src/routes/: get_json.rs  hello_world.rs  middleware_message.rs  mirror_body_json.rs  mirror_custom_headers.rs  mirror_user_agent.rs  mod.rs  read_middleware_custom_header.rs  set_middleware_custom_header.rs
axum/seaorm/: Cargo.toml
axum/seaorm/src/: lib.rs  main.rs
axum/seaorm/src/database/: mod.rs
backend/: .env  Cargo.toml
backend/src/: auth_handler.rs  email_service.rs  errors.rs  invitation_handler.rs  main.rs  models.rs  register_handler.rs  utils.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: Api.ts
frontend/src/components/api/: Api.tsx  Handler.tsx
frontend/src/components/pages/: InviteForm.tsx  RegistForm.tsx
frontend/src/contexts/: Context.tsx
frontend/src/pages/: Login.tsx  RegistForm.tsx  Root.tsx
frontend/src/routes/: Pages.tsx
sclient/: package-lock.json  package.json
sclient/src/: App.svelte  header.svelte  index.svelte  router.svelte
sclient/src/api/: authHandler.ts
sclient/src/auth/: Join.svelte  join.svelte
sclient/src/models/: index.ts
warp-web/: Cargo.toml
warp-web/migrations/2020-01-21-121955_user/: down.sql  up.sql
warp-web/migrations/2020-01-21-122000_invitation/: down.sql  up.sql
warp-web/src/: auth_handler.rs  email_service.rs  main.rs  models.rs  schema.rs  session.rs  utils.rs
warp-web/src/api/: auth.rs  invite.rs  mod.rs
warp-web/src/handlers/: auth_handler.rs  invite_hanlder.rs  mod.rs
warp-web/src/models/: invitation.rs  user.rs
warp-web/src/routes/: auth_route.rs  invite_route.rs  mod.rs
warp-web/src/test/: test.rs
yclient/: Cargo.toml
