[package]
name = "warp-web"
version = "0.1.0"
authors = ["clemado1 <clemado1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argonautica = "0.2.0"
bytes = "0.5"
chrono = { version = "0.4.6", features = ["serde"] }
derive_more = "0.15.0"
diesel = { version = "1.4.2", features = ["postgres","uuidv07", "r2d2", "chrono"] }
r2d2 = "0.8"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
headers = "0.3"
http = "0.2"
hyper = "0.13"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "0.2", features = ["blocking", "fs", "stream", "sync", "time"] }
rustls = { version = "0.16", optional = true }
uuid = { version = "0.7", features = ["serde", "v4"] }
lettre = "0.9.2"
lettre_email = "0.9.2"
lazy_static = "1.3.0"
warp = "0.2.0"
env_logger = "0.6.0"
pretty_env_logger = "0.3"
dotenv = "0.15.0"

[dev-dependencies]
handlebars = "1.0.0"
tokio = { version = "0.2", features = ["macros"] }