[package]
name = "warp-web"
version = "0.1.0"
authors = ["clemado1 <clemado1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Make warp work with them.
warp = "0.2.0"
tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
futures = { version = "0.3", default-features = false, features = ["alloc"]}
# Help users to easily click the target localhost.
console = "0.9.1"
# Postgresl
diesel = { version = "1.4.6", features = ["postgres", "r2d2", "uuidv07", "chrono"] }
dotenv = "0.15.0"
r2d2 = "0.8.6"
# Serde
serde = "1.0.101"
serde_json = "1.0.41"
serde_derive = "1.0.101"

# To use r2d2 Postgresql dbpool
# https://www.reddit.com/r/rust/comments/erx83j/warp_i_made_some_warp_web_framework_examples_i/
lazy_static = "1.4"

argonautica = "0.2.0"
bcrypt = "0.5.0"
chrono = { version = "0.4.6", features = ["serde"] }

lettre = "0.9.2"
lettre_email = "0.9.2"

uuid = { version = "0.7", features = ["serde", "v4"] }
log = "0.4"


[dev-dependencies]
handlebars = "1.0.0"
tokio = { version = "0.2", features = ["macros"] }