[package]
name = "yclient"
version = "0.1.0"
authors = ["clemado1 <clemado1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.6"
log = "0.4.8"
serde = { version = "1.0.103", features = ["derive"] }
stdweb = "0.4.20"
webapp = { version = "1.0.0"}
yew = { version = "0.10.0", features = ["cbor"] }
yew-router = "0.7.0"