[package]
name = "data"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.202", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full", "macros", "rt-multi-thread"] }
validator = { version = "0.18.1", features = ["derive"] }

dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
sea-orm = { version = "1.0.0", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde_with = "3.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
